[gd_scene load_steps=6 format=3 uid="uid://bf27dke83d762"]

[ext_resource type="Script" path="res://pages/tutorial/scripts/tutorial_storage_container.gd" id="1_8pmq1"]
[ext_resource type="PackedScene" uid="uid://d3pqoje65r0h4" path="res://pages/tutorial/scenes/tutorial_storage_item.tscn" id="2_aore8"]
[ext_resource type="FontFile" uid="uid://bg1uiqnkiuxrm" path="res://assets/fonts/friendlyscribbles.ttf" id="2_q0q4y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cktgd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8ypv"]
content_margin_left = 40.0
content_margin_right = 40.0
bg_color = Color(0.180392, 0.0196078, 0.0431373, 0.27451)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="TutorialStorageContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cktgd")
script = ExtResource("1_8pmq1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8ypv")

[node name="ItemListScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PanelContainer/ItemListScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="StorageItem" parent="MarginContainer/PanelContainer/ItemListScrollContainer/GridContainer" instance=ExtResource("2_aore8")]
visible = false
layout_mode = 2

[node name="StorageEmptyLabel" type="Label" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q0q4y")
theme_override_font_sizes/font_size = 96
text = "Sorry, your storage is empty :("
horizontal_alignment = 1
